# Dell-Inspiron

./: .env  .gitignore  README.md  main.py  output_adapter.py  pyproject.toml  run.py  run_graph.py  semantic_chunker.py
api/: server.py
chunker/: semantic_chunker.py
extractor/: __init__.py  chains.py  deduplicator.py  extractor.py  runner.py  schema.py
frontend/: index.html  script.js  style.css
graph/: __init__.py  cooccurrence_extractor.py  entity_extractor.py  entity_merger.py  entity_resolver.py  hybrid_entity_extractor.py  knowledge_graph.py  relation_classifier.py  relationship_extractor.py  spacy_extractor.py  tech_extractor.py
graph_builder/: __init__.py  connection.py  constraints.py  ingestion.py  runner.py  schema.py  validator.py
output/: .pinecone_ingested  bio_parsed.json  bio_processed.json  chunks.json  entities.json  entities_neo4j.json  graph_data.json  knowledge_graph.html  relationships.json  relationships_neo4j.json  sample_parsed.json  sample_processed.json
parser/: pdf_parser.py
processor/: __init__.py  multimodal_processor.py
relationship/: __init__.py  chains.py  deduplicator.py  extractor.py  runner.py  schema.py
retriever/: __init__.py  context_builder.py  context_compression.py  context_expansion.py  evidence_agent.py  graph_retriever.py  orchestrator.py  pipeline.py  query_understanding.py  reranker.py  runner.py  schema.py  semantic_retriever.py
synthesizer/: __init__.py  prompts.py  runner.py  synthesis_chain.py  synthesis_schema.py
webapp/: README.md  app.py  config.py  job_store.py  pipeline_service.py  (+1 more)
(+20 files in other folders)
