[project]
name = "dell-futureminds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai>=0.8.6",
    "langchain>=1.3.10",
    "langchain-mistralai>=1.1.5",
    "llama-index>=0.14.22",
    "networkx>=3.4.2",
    "pdfplumber>=0.11.10",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "pyvis>=0.3.2",
    "rank-bm25>=0.2.2",
    "streamlit>=1.58.0",
]
